--- a/WEB PANEL/index.html
+++ b/WEB PANEL/index.html
@@ -12,16 +12,16 @@
 <script type="text/javascript">
 //EDIT UNDER THIS ONLY
 
-const  firebaseConfig = {
-apiKey: "API KEY",
-authDomain: "AUTH DOMAIN",
-databaseURL: "DATABSE URL",
-projectId: "PROJECT ID",
-storageBucket: "BUCKET URL",
-messagingSenderId: "SENDER ID",
-appId: "APP ID"
+const firebaseConfig = {
+  apiKey: "AIzaSyBl1mkYtN-kt86qrWHaVmuf-gu2t1WH9yQ",
+  authDomain: "myappnew-282ec.firebaseapp.com",
+  databaseURL: "https://myappnew-282ec-default-rtdb.firebaseio.com",
+  projectId: "myappnew-282ec",
+  storageBucket: "myappnew-282ec.firebasestorage.app",
+  messagingSenderId: "832973202813",
+  appId: "1:832973202813:web:a7eba43d766e9eacb49814",
+  measurementId: "G-MXRFCMXN34"
 };
- 
 
 //DON'T EDIT BELOW THIS
 
